    - [/kirkwood] netlink: Disable NETLINK_MMAP
    - [/kirkwood] cgroups: Disable MEMCG
    - [/kirkwood] Disable CHECKPOINT_RESTORE
    - [/orion5x] mm: Disable COMPACTION, MIGRATION
    - [/orion5x] block: Disable BLK_DEV_INTEGRITY
    - [/orion5x] SCSI: Disable SCSI_UFSHCD
    - [/orion5x] target: Disable TCM_IBLOCK
    - [/orion5x] Disable AUDIT, DEBUG_BUGVERBOSE, PROFILING, OPROFILE

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 09 Dec 2014 02:08:47 +0000

linux (3.17.4-1~exp1) experimental; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.1
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.2
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.3
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.4

  [ Ben Hutchings ]
  * Set ABI to trunk
  * aufs: Update to aufs3.17-20141020:
    - support for AT_EMPTY_PATH/LOOKUP_EMPTY
    - Show union filesystem paths in /proc/*/map_files/*
    - bugfix, fix the returning size of the branch attr
  * Compile with gcc-4.9 (except for ia64,m68k,s390*,sh4)

 -- maximilian attems <maks@debian.org>  Mon, 24 Nov 2014 00:00:27 +0100

linux (3.17-1~exp1) experimental; urgency=medium

  * New upstream release: http://kernelnewbies.org/Linux_3.17

  * armel: Drop ixp4xx image.
  * topconfig: Reenable renamed IP_NF_NAT. (closes #762458)
  * udeb: refix renamed i2c-core.

 -- maximilian attems <maks@debian.org>  Tue, 14 Oct 2014 23:01:39 +0200

linux (3.17~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update to aufs3.x-rcN-20140908

  [ maximilian attems ]
  * udeb: fix renamed i2ccore.

 -- maximilian attems <maks@debian.org>  Thu, 18 Sep 2014 23:50:00 +0200

linux (3.16.7-ckt2-1) unstable; urgency=high

  * New upstream stable update:
    http://kernel.ubuntu.com/stable/ChangeLog-3.16.7-ckt1
    - drm/tilcdc: Fix the error path in tilcdc_load()