@@ -27,6 +27,7 @@ recommends: uboot-mkimage
 # SheevaPlug: 4194304 - 8 - 64 = 4194232
 # QNAP TS-119/TS-219: 2097152 - 8 - 64 = 2097080
 check-size: 2097080
+check-size-with-dtb: true
 
 [orion5x_description]
 hardware: Marvell Orion
@@ -38,6 +39,7 @@ recommends: uboot-mkimage
 # HP Media Vault mv2120: ca 2 MB
 # QNAP TS-109/TS-209 & TS-409: 2097152 - 8 - 64 = 2097080
 check-size: 1572792
+check-size-with-dtb: true
 configs:
  armel/config-reduced
  armel/config.orion5x
