@@ -52,6 +52,7 @@ linux (3.18-1~exp1) UNRELEASED; urgency=medium
     - [/orion5x] SCSI: Disable SCSI_UFSHCD
     - [/orion5x] target: Disable TCM_IBLOCK
     - [/orion5x] Disable AUDIT, DEBUG_BUGVERBOSE, PROFILING, OPROFILE
+  * [armel] Include size of appended DTBs in image size check
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 09 Dec 2014 02:08:47 +0000
 
